Prepare for deployment

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
     }
 </script>
 
-<script id="__bs_script__">//<![CDATA[
-if (location.port==3000) document.write("<script async src='//HOST:3000/browser-sync/browser-sync-client.js?v=2.23.6'><\/script>".replace("HOST", location.hostname));
-//]]></script>
+<script id="__bs_script__">
+	if (location.port===3000) {
+		document.write('<script async src="//'+location.hostname+':'+location.port+'/browser-sync/browser-sync-client.js?v=2.23.6"><'+'/script>');
+	}
+</script>
 </body>
