--- a/src/tema-module/tema-module.html
+++ b/src/tema-module/tema-module.html
@@ -1,17 +1,24 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
+<link rel="import" href="../shared-styles.html">
 <link rel="import" href="../../bower_components/paper-card/paper-card.html">
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
 
 <dom-module id="tema-module">
     <template>
-        <style>
-            paper-card:not([tema]) {
-                display: none;
+        <style include="shared-styles">
+            paper-card {
+                --paper-card-header-image: {
+                    max-height: 20vh;
+                };
+            }
+
+            pre {
+                white-space: pre-wrap;
             }
         </style>
         <!--suppress HtmlUnknownAttribute, SpellCheckingInspection -->
-        <paper-card image="src/tema-module/programcode.png" tema$="[[tema]]">
+        <paper-card image="../../images/programcode.png" hidden$="[[!tema]]">
             <pre class="card-content" inner-h-t-m-l="[[tema.description]]"></pre>
         </paper-card>
     </template>
