Manual page routing

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       Note: If you intend to serve from a non-root path, see [polymer-root-path] below.
     -->
-    <base href="/">
+    <base href="/elte-mester-data/">
 
     <link rel="icon" href="images/favicon.ico">
 
@@ -73,7 +73,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       * to indicate the path from which you'll be serving, including leading
       * and trailing slashes (e.g., `/my-app/`).
       */
-      window.Polymer = {rootPath: '/'};
+      window.Polymer = {rootPath: '/elte-mester-data/'};
 
       // Load and register pre-caching Service Worker
       if ('serviceWorker' in navigator) {
