--- a/src/my-app.html
+++ b/src/my-app.html
@@ -69,12 +69,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         <app-location
                 route="{{route}}"
-                url-space-regex="^[[rootPath]]">
+                url-space-regex="^[[rootPath]]"
+                use-hash-as-path>
         </app-location>
 
         <app-route
                 route="{{route}}"
-                pattern="[[rootPath]]:page"
+                pattern=":page"
                 data="{{routeData}}"
                 tail="{{subroute}}">
         </app-route>
@@ -84,7 +85,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <app-drawer id="drawer" slot="drawer" swipe-open="[[narrow]]">
                 <app-toolbar>Menu</app-toolbar>
                 <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-                    <a name="browse" href="[[rootPath]]browse">Browse</a>
+                    <a name="browse" href="#browse">Browse</a>
                     <a href="https://github.com/lezsakdomi/elte-mester-data">
                         <img src="../images/GitHub-Logos/GitHub_Logo.png" alt="Fork me on GitHub"
                              style="height: 1.5em;"/>
