Gather rootPath from location.pathName

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       Note: If you intend to serve from a non-root path, see [polymer-root-path] below.
     -->
-    <base href="/elte-mester-data/">
+    <base href="/">
 
     <link rel="icon" href="images/favicon.ico">
 
@@ -73,7 +73,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       * to indicate the path from which you'll be serving, including leading
       * and trailing slashes (e.g., `/my-app/`).
       */
-      window.Polymer = {rootPath: '/elte-mester-data/'};
+      window.Polymer = {rootPath: location.pathname};
 
       // Load and register pre-caching Service Worker
       if ('serviceWorker' in navigator) {
@@ -82,6 +82,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             scope: Polymer.rootPath,
           });
         });
+      }
+
+      if (document.querySelector('base')) {
+          document.querySelector('base').href = Polymer.rootPath;
       }
     </script>
 
