--- a/src/my-app.html
+++ b/src/my-app.html
@@ -23,6 +23,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="my-icons.html">
 
 <link rel="lazy-import" href="my-browse.html">
+<link rel="lazy-import" href="my-debug.html">
 <link rel="lazy-import" href="my-view404.html">
 
 <dom-module id="my-app">
@@ -109,6 +110,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                         fallback-selection="view404"
                         role="main">
                     <my-browse name="browse"></my-browse>
+                    <my-debug name="debug"></my-debug>
                     <my-view404 name="view404"></my-view404>
                 </iron-pages>
             </app-header-layout>
