--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -41,6 +41,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 color: #212121;
                 font-size: 22px;
             }
+
+            [hidden] {
+                display: none;
+            }
         </style>
     </template>
 </dom-module>
