Use img srcs relative to importPath

--- a/src/tema-module/tema-module.html
+++ b/src/tema-module/tema-module.html
@@ -18,7 +18,7 @@
             }
         </style>
         <!--suppress HtmlUnknownAttribute, SpellCheckingInspection -->
-        <paper-card image="../../images/programcode.png" hidden$="[[!tema]]">
+        <paper-card image="[[importPath]]../../images/programcode.png" hidden$="[[!tema]]">
             <pre class="card-content" inner-h-t-m-l="[[tema.description]]"></pre>
         </paper-card>
     </template>
