--- a/src/my-app.html
+++ b/src/my-app.html
@@ -88,7 +88,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
                     <a name="browse" href="#browse">Browse</a>
                     <a href="https://github.com/lezsakdomi/elte-mester-data">
-                        <img src="../images/GitHub-Logos/GitHub_Logo.png" alt="Fork me on GitHub"
+                        <img src="[[importPath]]../images/GitHub-Logos/GitHub_Logo.png" alt="Fork me on GitHub"
                              style="height: 1.5em;"/>
                     </a>
                 </iron-selector>
