src/script.html

--- a/src/my-browse.html
+++ b/src/my-browse.html
@@ -9,10 +9,7 @@
 <link rel="import" href="feladat-dropdown/feladat-dropdown.html">
 <link rel="import" href="tema-module/tema-module.html">
 <link rel="import" href="feladat-module/feladat-module.html">
-
-<script src="../bower_components/comma-separated-values/csv.js"></script>
-<script src="../polyfills.js"></script>
-<script src="script.js"></script>
+<link rel="import" href="script.html">
 
 <dom-module id="my-browse">
     <template>
