--- a/src/tema-dropdown/tema-dropdown.html
+++ b/src/tema-dropdown/tema-dropdown.html
@@ -1,6 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../../bower_components/polymer/lib/elements/dom-repeat.html">
 <link rel="import" href="../../bower_components/paper-dropdown-input/paper-dropdown-input.html">
+<link rel="import" href="../script.html">
 
 <style>
     tema-dropdown {
