--- a/src/my-app.html
+++ b/src/my-app.html
@@ -23,6 +23,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="my-icons.html">
 
 <link rel="lazy-import" href="my-browse.html">
+<link rel="lazy-import" href="my-about.html">
 <link rel="lazy-import" href="my-debug.html">
 <link rel="lazy-import" href="my-view404.html">
 
@@ -87,6 +88,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <app-toolbar>Menu</app-toolbar>
                 <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
                     <a name="browse" href="#browse">Browse</a>
+                    <a name="about" href="#about">About</a>
                     <a href="https://github.com/lezsakdomi/elte-mester-data">
                         <img src="[[importPath]]../images/GitHub-Logos/GitHub_Logo.png" alt="Fork me on GitHub"
                              style="height: 1.5em;"/>
@@ -110,6 +112,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                         fallback-selection="view404"
                         role="main">
                     <my-browse name="browse"></my-browse>
+                    <my-about name="about"></my-about>
                     <my-debug name="debug"></my-debug>
                     <my-view404 name="view404"></my-view404>
                 </iron-pages>
