--- a/src/my-debug.html
+++ b/src/my-debug.html
@@ -1,9 +1,7 @@
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="shared-styles.html">
 
-<script src="../bower_components/comma-separated-values/csv.js"></script>
-<script src="../polyfills.js"></script>
-<script src="script.js"></script>
+<link rel="import" href="script.html">
 
 <dom-module id="my-debug">
     <template>
