--- a/src/my-debug.html
+++ b/src/my-debug.html
@@ -1,6 +1,9 @@
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="shared-styles.html">
 
+<link rel="import" href="../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="script.html">
 
 <dom-module id="my-debug">
@@ -13,6 +16,12 @@
         </style>
 
         <h1>Debugging</h1>
+        <div class="card">
+            <paper-button raised on-click="_unregSw">
+                <iron-icon icon="refresh"></iron-icon>
+                Unregister ServiceWorker
+            </paper-button>
+        </div>
         <div class="card">
             <table>
                 <tr>
@@ -32,6 +41,18 @@
                     // Polymer.Element#rootPath
                     rootPath: String,
                 };
+            }
+
+            _unregSw() {
+                navigator.serviceWorker.getRegistration().then((reg) => {
+                    if (reg) {
+                        reg.unregister().then(() => {
+                            window.location.reload();
+                        });
+                    } else {
+                        console.log("No serviceWorker found");
+                    }
+                });
             }
         }
 
