--- a/src/my-app.html
+++ b/src/my-app.html
@@ -20,6 +20,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="my-icons.html">
 
 <link rel="lazy-import" href="my-browse.html">
@@ -91,7 +93,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                     <a name="browse" href="#browse">Browse</a>
                     <a name="search" href="#search">Search</a>
                     <a name="about" href="#about">About</a>
-                    <a href="https://github.com/lezsakdomi/elte-mester-data">
+                    <a href="http://mester.inf.elte.hu/">
+                        <iron-icon icon="exit-to-app"></iron-icon>
+                        Mester
+                    </a>
+                    <a href="https://github.com/lezsakdomi/elte-mester-data"
+                       style="margin-top: 1.5em;">
                         <img src="[[importPath]]../images/GitHub-Logos/GitHub_Logo.png" alt="Fork me on GitHub"
                              style="height: 1.5em;"/>
                     </a>
