--- a/src/feladat-dropdown/feladat-dropdown.html
+++ b/src/feladat-dropdown/feladat-dropdown.html
@@ -72,6 +72,7 @@
                             this.push('items', {
                                 title: tema.name,
                                 object: tema,
+                                feladat: tema.mintafeladat,
                                 tema: tema,
                                 style: "font-weight: lighter;",
                                 new: temaList.length > 1
