--- a/src/feladat-module/feladat-module.html
+++ b/src/feladat-module/feladat-module.html
@@ -28,6 +28,12 @@
                         Minta bemenet
                     </paper-button>
                 </a>
+                <a href$="[[feladat.codeUrl]]" target="_blank">
+                    <paper-button>
+                        <iron-icon icon="file-download"></iron-icon>
+                        Megoldás
+                    </paper-button>
+                </a>
             </div>
         </paper-card>
     </template>
